Change 'writepid' to 'cpuset' option when specifying the cpuset for a process
Now 'cpuset' should be used to set the set of CPUs to run a process on.

Bug: None
Test: `m -j32` succeeds.
Change-Id: I13126ea069cf6f7d6ea840601347b020e30f18ed

--- a/perfprofd/perfprofd.rc
+++ b/perfprofd/perfprofd.rc
@@ -3,4 +3,4 @@ service perfprofd /system/xbin/perfprofd
     user root
     group root wakelock
     oneshot
-    writepid /dev/cpuset/system-background/tasks
+    cpuset /system-background
